# peter-the-rooster-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  map.cpp  map.h  old_headers.h  sprite_info.md  sprites.cpp  sprites.h
Engine/: Installation.md  draw.cpp  draw.h  engine.cpp  example.cpp  font.cpp  font.h  input.cpp  input.h  log.cpp  log.h  sfx.cpp  sfx.h  sound.cpp  sound.h  wait.cpp  wait.h
Language/: finnish.cpp  language.cpp  language.h
LevelEditor/: editor.cpp  editor.h
SpriteCreator/: sprite_creator.cpp
